@startuml
class SudokuFieldsRemover {
   + Sudoku removeFields(Sudoku sudoku, Difficulty dif)
   - int amountOfCellsToRemove(Difficulty dif)
   - void removeNumberOfCells(int amountOfCellsToRemove)
   - int countPossibleSolutions(SudokuArray sudokuGameField)
}

class SudokuGeneratorTransformation {
    + Sudoku generateSudoku(Difficulty dif)
}

class SudokuSolver {
    + boolean isSudokuSolvable(int[][] sudokuField, int row, int col)
    - boolean isSudokuFieldValid(int[][] sudoku, int row, int col, int value)
}

SudokuFieldsRemover --> SudokuSolver
SudokuGeneratorTransformation --> SudokuFieldsRemover
@enduml
